--- a/package.json
+++ b/package.json
@@ -1,32 +1,18 @@
 {
-  "name": "ong-server",
-  "version": "0.0.0",
-  "private": true,
-  "engines": {
-    "node": "16.15.x",
-    "npm": "8.11.x"
-  },
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app",
+    "dev": "npx nodemon app"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "express-validator": "^6.14.2",
-    "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
-    "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^2.2.3",
-    "sequelize": "^6.3.5"
-  },
-  "devDependencies": {
-    "sequelize-cli": "^6.4.1"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.4"
   }
 }
